Fix about layout error on mobile.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+
 a {
     text-decoration: none;
 }
@@ -15,7 +16,6 @@ a {
     gap: 5px;
     background-color: #4682A9;
     height: 100vh;
-
 }
 .intro span {
     color: #F6F4EB;
@@ -68,7 +68,7 @@ a {
 .about {
     background-color: #333;
     color: white;
-    height: 110vh;
+    height: 100vh;
     gap: 10px;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -267,5 +267,27 @@ footer a :hover {
     }
     .technologies img {
         width: 70px;
+    }
+}
+@media (max-width: 400px){
+    .about {
+        height: 120vh;
+    }
+    .man {
+        max-width: 50%;
+        margin: 10px;
+    }
+    .about p {
+        font-size: 0.9rem;
+        width: 300px;
+    }
+    .technologies {
+        width: 300px;
+    }
+    .technologies img {
+        max-width: 50px;
+    }
+    footer {
+        grid-template-columns: 25% 50% 25%;
     }
 }
